# tagging_data_prep

./: .gitignore  AGENTS.md  PLAN.md  README.md  config.yaml  main.py  pyproject.toml  test_state.json
src/: config.py  loader.py
src/gepa_pipeline/: __init__.py  adapter.py  config.py  labeler.py  optimizer.py  sampler.py  training_data.py
src/modules/: __init__.py  hierarchical_classifier.py  level_classifier.py
src/prompts/: __init__.py  defaults.py  loader.py
src/schemas/: __init__.py  classification.py  labels.py
src/signatures/: __init__.py  classify.py
src/validation/: __init__.py  label_validator.py
tests/: conftest.py  test_loader.py  test_modules_hierarchical_classifier.py  test_schemas_classification.py  test_schemas_labels.py  test_validation.py
